# CPP-Ogre-Saturn-simulator

./: .gitignore  CMakeLists.txt  README.md  resources.cfg  test
config/: plugins.cfg  resources.cfg
lib/: CMakeLists.txt
lib/pujOgre/: Application.cxx  Application.h  CMakeLists.txt
lib/pujOgre/src/: PujOgreApplication.cxx
resources/materials/: MarsMaterial.material  MatShip.material  MatShip1.material  MatShip2.material  Material2.material  NeptunoMaterial.material  RingMaterial.material  SaturnoMaterial.material  UranoMaterial.material  VenusMaterial.material  earth.material  jupiter.material  materials.material  mercuy.material  pluton.material  sun.material
resources/meshes/: Mars.mesh  Neptuno.mesh  Saturn.mesh  Urano.mesh  Venus.mesh  earth.mesh  jupiter.mesh  mercury.mesh  pluton.mesh  sphere.mesh  sun.mesh
resources/xmls/: Neptuno.mesh.xml  Saturn.mesh.xml  Urano.mesh.xml  Venus.mesh.xml  earth.mesh.xml  jupiter.mesh.xml  mercury.mesh.xml  pluton.mesh.xml  sun.mesh.xml
simulator/: CMakeLists.txt  main.cxx
simulator/include/common/: app.hxx  camera_manager.hxx  math_utilities.hxx  transform.hxx
simulator/include/controller/: planet_controller.hxx  ship_controller.hxx
simulator/include/model/: planet.hxx  ship.hxx
simulator/include/view/: planet_view.hxx  ship_view.hxx
simulator/src/common/: app.cxx  camera_manager.cxx  math_utilities.cxx  transform.cxx
simulator/src/controller/: planet_controller.cxx  ship_controller.cxx
simulator/src/model/: planet.cxx  ship.cxx
simulator/src/view/: planet_view.cxx  ship_view.cxx
src/: CMakeLists.txt  main.cxx
src/controller/: planet_controller.cxx  planet_controller.hxx  ship_controller.cxx  ship_controller.hxx
src/model/: app.cxx  app.hxx  camera_manager.cxx  camera_manager.hxx  planet.cxx  planet.hxx  ship.cxx  ship.hxx
src/utilities/: math_utilities.cxx
src/view/: planet_view.cxx  planet_view.hxx  ship_view.cxx  ship_view.hxx
